# kabeuchi

./: .editorconfig  .gitignore  CREDITS.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  draft-release.yml
docs/: config.toml
src/: api.rs  fs.rs  input.rs  main.rs  path.rs
src/cmd/: configure.rs  mod.rs  path.rs  prompt.rs
src/models/: api.rs  config.rs  messages.rs  mod.rs
src/traits/: command_definition.rs  mod.rs
