[package]
name = "kabeuchi"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.155", features=["derive"]}
toml = "0.7.3"
serde_yaml = "0.9.19"
dirs = "4.0.0"
clap = {version = "4.1.8", features=["cargo"]}
serde_json = "1.0.94"
ureq = "2.6.2"
